# openclaw-student-assistant

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: .env.example  SOUL.md  mcporter.example.json5  nanoclaw.example.json5  openclaw.example.json5
docs/: onboarding.md
mcp_servers/edstem/: ed_client.py  server.py
mcp_servers/gradescope/: server.py
mcp_servers/virtual-ta-bridge/: bridge.mjs  package-lock.json  package.json
provisioning/: provision-student.sh  setup-student.sh
tests/: test_edstem_client.py  test_edstem_server.py
