[project]
name = "openclaw-student-assistant"
version = "0.1.0"
description = "Personal AI agent for university students — OpenClaw + ChatCSE integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "edapi>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
    "mypy>=1.20",
]
gradescope = [
    "gradescopeapi>=0.2",
]

# ──────────────────────────────────────────────
# Ruff — linter + formatter
# ──────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length — handled by formatter
    "S101",   # assert usage
    "S105",   # hardcoded passwords — false positives in tests
    "S106",   # hardcoded passwords — false positives in tests
    "B008",   # function call in default arg — FastAPI Depends() pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ──────────────────────────────────────────────
# mypy — static type checking
# ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

# ──────────────────────────────────────────────
# pytest — test runner
# ──────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
